# quantumlauncher

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/ql_core/src/: file_utils.rs
crates/ql_instances/src/auth/: ms.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  config.rs  instance.rs  java.rs  loader.rs  mod.rs  mods.rs  packager.rs  server.rs  shortcut.rs
src/components/: EditTab.tsx  LogTab.tsx  MainContent.tsx  PlayTab.tsx  Sidebar.tsx  Titlebar.tsx
src/components/common/: Button.tsx  ContextMenu.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  Select.tsx  TabBar.tsx  Toast.tsx
src/components/modals/: ChangelogModal.tsx  ConfirmModal.tsx  CreateInstanceModal.tsx  ExportInstanceModal.tsx  LoaderModal.tsx  LoginModal.tsx  ModDescriptionModal.tsx  ModsModal.tsx  OnboardingModal.tsx  SettingsModal.tsx  ShortcutModal.tsx
src/hooks/: useKeyboardShortcuts.ts  useTauriCommand.ts  useTauriEvent.ts
src/stores/: appStore.ts  themeStore.ts
src/types/: index.ts
src/utils/: tauri.ts
